<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/base"/>
    <Preference
        app:icon="@mipmap/register"
        app:fragment="com.android.newpos.store.sdk.demo.register.RegisterFragment"
        app:title="@string/menu_register"
        app:summary="@string/menu_register_detail"/>
    <Preference
        app:icon="@mipmap/inquirer"
        app:fragment="com.android.newpos.store.sdk.demo.inquirer.AppInquirerFragment"
        app:title="@string/menu_inquirer"
        app:summary="@string/menu_inquirer_detail"/>
    <Preference
        app:icon="@mipmap/position"
        app:fragment="com.android.newpos.store.sdk.demo.lbs.LbsFragment"
        app:title="@string/menu_lbs"
        app:summary="@string/menu_lbs_detail"/>
    <Preference
        app:icon="@mipmap/params"
        app:fragment="com.android.newpos.store.sdk.demo.param.ParamFragment"
        app:title="@string/menu_param"
        app:summary="@string/menu_param_detail"/>
    <Preference
        app:icon="@mipmap/ota"
        app:fragment="com.android.newpos.store.sdk.demo.ota.OTAFragment"
        app:title="@string/menu_ota"
        app:summary="@string/menu_ota_detail"/>

    <PreferenceCategory
        app:title="@string/advanced"/>
    <Preference
        app:icon="@mipmap/cloud"
        app:fragment="com.android.newpos.store.sdk.demo.cloud.CloudFragment"
        app:title="@string/menu_cloud"
        app:summary="@string/menu_cloud_detail"/>
    <Preference
        app:icon="@mipmap/rki"
        app:fragment="com.android.newpos.store.sdk.demo.rki.RkiFragment"
        app:title="@string/menu_rki"
        app:summary="@string/menu_rki_detail"/>
    <Preference
        app:icon="@mipmap/insight"
        app:title="@string/menu_insight"
        app:summary="@string/menu_insight_detail"/>
    <Preference
        app:icon="@mipmap/hotfix"
        app:title="@string/menu_hotfix"
        app:summary="@string/menu_hotfix_detail"/>
    <Preference
        app:icon="@mipmap/stack"
        app:title="@string/menu_stack"
        app:summary="@string/menu_stack_detail"/>
</androidx.preference.PreferenceScreen>