<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ota.OTAFragment">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_firmware"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_firmware"
        app:layout_constraintTop_toBottomOf="@+id/query"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install_firmware"
        app:layout_constraintTop_toBottomOf="@+id/download"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/install"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/url"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/url"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/detail"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent">-->

<!--        <Button-->
<!--            android:id="@+id/start_btn_1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1.0"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:text="START"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="14sp" />-->

<!--        <Button-->
<!--            android:id="@+id/pause_btn_1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1.0"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:text="PAUSE"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="14sp" />-->

<!--        <Button-->
<!--            android:id="@+id/delete_btn_1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_weight="1.0"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:text="DELETE"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="14sp" />-->
<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>